--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 dj-database-url==2.3.0
 Django==5.1.5
+django-cors-headers==4.7.0
 django-debug-toolbar==5.0.1
 djangorestframework==3.15.2
 gunicorn==23.0.0
